<resources>

    <string name="app_name">宠物狗防丢</string>
    <string name="btn_open_search">开启寻狗</string>
    <string name="btn_close_search">关闭寻狗</string>
    <string name="title_text">围栏设置</string>
    <string name="fence_shape">围栏形状</string>
    <string name="circle_fence">圆形</string>
    <string name="polygon_fence">多边形</string>
    <string name="vertexes_number">顶点数</string>
    <string name="sure_btn_text">确定</string>
    <string name="fence_radius">半径（单位：米）</string>
    <string name="fence_radius_hint">100</string>
    <string name="cancel">取消</string>
    <string name="sure">确定</string>
    <string name="create_circle">创建圆形围栏</string>
    <string name="fence_create_polygon">创建多边形围栏</string>
    <string name="route_search">路线导航</string>
    <string name="trace_search">轨迹查询</string>
    <string name="search_time">查询时间设置</string>
    <string name="text_trace_search">轨迹查询</string>
    <string name="all_cancel">取消</string>
    <string name="all_sure">确定</string>
    <string name="start_stop_time">起止时间</string>
    <string name="lock_text">一键上锁</string>

    <string name="battery_text">电池:%1$d %%</string>
    <string name="lon_text">经度:%1$.6f</string>
    <string name="lat_text">纬度:%1$.6f</string>
    <string name="model_text">普通模式</string>
    <string name="history_search_text">历史轨迹查询</string>
    <string name="focus_dog_text">切换到狗</string>

</resources>
