<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/layout_fence_create"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_alignParentBottom="true"
              android:layout_gravity="center"
              android:background="@color/white"
              android:gravity="center_horizontal"
              android:orientation="vertical">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

        <TextView
                android:id="@+id/tv_fenceCreate_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:text="@string/create_circle"
                android:textColor="@color/color_dialog_title"
                android:textSize="20dp"/>

        <View style="@style/dialog_split_line_style"/>

    </LinearLayout>


    <LinearLayout
            android:id="@+id/layout_fenceCreate_radius"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/fence_radius"
                android:textColor="@color/color_dialog_title"
                android:textSize="18dp"/>

        <EditText
                android:id="@+id/edtTxt_fenceCreate_radius"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/all_border"
                android:hint="@string/fence_radius_hint"
                android:inputType="numberDecimal"
                android:paddingBottom="5dp"
                android:paddingLeft="5dp"
                android:paddingTop="5dp"
                android:textSize="20dp"/>

    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/dialog_border"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal">

        <Button
                android:id="@+id/btn_fenceCreate_cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:background="@color/cancel_bag"
                android:gravity="center"
                android:text="@string/cancel"
                android:textColor="@color/color_dialog_title"
                android:textSize="14dp"/>

        <Button
                android:id="@+id/btn_fenceCreate_sure"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:background="@color/sure_bg"
                android:text="@string/sure_btn_text"
                android:textColor="@color/white"
                android:textSize="14dp"/>

    </LinearLayout>


</LinearLayout>