<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >


    <com.baidu.mapapi.map.TextureMapView
        android:id="@+id/bmapView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:clickable="true" />

    <ImageView
        android:id="@+id/button_ring"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="50dp"
        android:padding="3dp"
        />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="5dp"
        android:layout_centerVertical="true"
        android:weightSum="1">

<!--        <Button-->
<!--            android:id="@+id/button_open"-->
<!--            android:layout_marginBottom="5dp"-->
<!--            android:layout_marginTop="5dp"-->
<!--            android:layout_width="60dp"-->
<!--            android:layout_weight="0.25"-->
<!--            android:layout_height="0dp"-->
<!--            android:background="@color/gray"-->
<!--            android:textColor="@color/white"-->
<!--            android:text="@string/btn_open_search" />-->

        <Button
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:id="@+id/button_search"
            android:layout_width="60dp"
            android:layout_weight="0.33"
            android:layout_height="0dp"
            android:background="@color/gray"
            android:textColor="@color/white"
            android:text="@string/route_search" />

        <Button
            android:id="@+id/button1"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:layout_width="60dp"
            android:layout_weight="0.33"
            android:layout_height="0dp"
            android:text="@string/model_text"
            android:background="@color/gray"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/button_dog"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:layout_width="60dp"
            android:layout_weight="0.33"
            android:layout_height="0dp"
            android:text="@string/focus_dog_text"
            android:background="@color/gray"
            android:textColor="@color/white" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/lock_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="30dp"
        android:background="@color/green"
        android:layout_above="@+id/layout_tracing_bottom">

        <ImageView
            android:layout_marginTop="5dp"
            android:id="@+id/button_lock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/lock_open"
            android:layout_above="@+id/lock_text"
            android:layout_marginLeft="10dp" />

        <TextView
            android:id="@+id/lock_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="一键充气"
            android:textColor="@color/black"
            />

    </LinearLayout>



<!--    <CheckBox-->
<!--        android:id="@+id/button_light"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_above="@+id/layout_tracing_bottom"-->
<!--        android:layout_alignParentRight="true"-->
<!--        android:layout_marginRight="10dp"-->
<!--        android:layout_marginBottom="40dp"-->
<!--        android:button="@drawable/light_selector"-->
<!--        android:padding="3dp"-->
<!--        />    -->

    <ImageView
        android:id="@+id/button_light"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/layout_tracing_bottom"
        android:layout_alignParentRight="true"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="40dp"
        android:src="@drawable/light_dark"
        android:padding="3dp"
        />


    <include layout="@layout/layout_activity_buttom"></include>

</RelativeLayout>