<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/white"
              android:orientation="vertical">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:divider="@drawable/layout_divider_shape"
                android:orientation="vertical"
                android:showDividers="middle">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:gravity="center|left"
                    android:orientation="vertical">

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:gravity="center|left"
                        android:text="@string/start_stop_time"
                        android:textColor="@color/list_item_title"
                        android:textSize="14dp"/>

                <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="10dp"
                        android:orientation="horizontal"
                        android:weightSum="1">

                    <Button
                            android:id="@+id/start_time"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="5dp"
                            android:layout_weight="0.5"
                            android:background="@mipmap/bg_btn_cancel"
                            android:onClick="onStartTime"
                            android:textColor="@color/layout_title"
                            android:textSize="10dp"/>


                    <Button
                            android:id="@+id/end_time"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:layout_weight="0.5"
                            android:background="@mipmap/bg_btn_cancel"
                            android:onClick="onEndTime"
                            android:textColor="@color/layout_title"
                            android:textSize="10dp"/>


                </LinearLayout>

            </LinearLayout>


            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:background="@color/light_gray"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:weightSum="1">

                <Button
                        android:id="@+id/button_cancel"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="10dp"
                        android:layout_weight="0.5"
                        android:background="@mipmap/bg_btn_cancel"
                        android:gravity="center"
                        android:text="@string/all_cancel"
                        android:textColor="@color/layout_title"
                        android:textSize="14dp"/>

                <Button
                        android:id="@+id/button_sure"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="20dp"
                        android:layout_weight="0.5"
                        android:background="@mipmap/bg_btn_sure"
                        android:text="@string/all_sure"
                        android:textColor="@color/white"
                        android:textSize="14dp"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>

